--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,17 @@ background: goldenrod;
 }
 .wrapper{
     width: 420px;
-    background: skyblue;
+    background: darkblue;
     color: aliceblue;
 }
+.wrapper h1{
+    font-size: 36px;
+    text-align: center;
+}
+.wrapper .input-box{
+    width: 100px;
+    height: 50px;
+    background: salmon;
+    margin: 30px 0;
+}
+
