--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,9 +20,25 @@ background: goldenrod;
     text-align: center;
 }
 .wrapper .input-box{
+    position: relative;
     width: 100px;
     height: 50px;
-    background: salmon;
+    /* background: salmon; */
     margin: 30px 0;
 }
-
+.input-box input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255,255,255,.2);
+    border-radius: 40px;
+}
+.input-box input::placeholder{
+    color: aliceblue;
+}
+.input-box i{
+    position:absolute;
+    right: 20px;
+}
